deploy/06-filebeat-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  labels:
    k8s-app: filebeat
spec:
  selector:
    matchLabels:
      k8s-app: filebeat
  template:
    metadata:
      labels:
        k8s-app: filebeat
    spec:
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:7.10.1
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlogk8s
          mountPath: /var/log/kubernetes
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlogk8s
        hostPath:
          path: /var/log/kubernetes
