deploy/09-service-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
spec:
  selector:
    app: kibana
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5601
